--- a/.github/workflows/deploy-cp.yml
+++ b/.github/workflows/deploy-cp.yml
@@ -17,9 +17,16 @@ jobs:
 
       - name: Install az, authenticate to cluster, etc
         run: |
+          az login \
+             --service-principal \
+             -u ${{ secrets.AZ_CLIENT_ID }} \
+             -p ${{ secrets.AZ_CLIENT_SECRET }} \
+             --tenant ${{ secrets.AZ_TENANT_ID }}
           az aks get-credentials \
                --resource-group ${{ secrets.AZ_RG }} \
                --name ${{ secrets.AKS_CLUSTER }} \
                --overwrite-existing
+          az account set --subscription ${{ secrets.AZ_SUBSCRIPTION_ID }}
+
           ./deploy.sh
           
